docs/5.x/vpc_ipam_pool_cidr.md
---
permalink: /vpc_ipam_pool_cidr/
---

# vpc_ipam_pool_cidr

`vpc_ipam_pool_cidr` represents the `aws_vpc_ipam_pool_cidr` Terraform resource.



This package contains functions and utilities for setting up the resource using Jsonnet code.


## Index

* [`fn new()`](#fn-new)
* [`fn newAttrs()`](#fn-newattrs)
* [`fn withCidr()`](#fn-withcidr)
* [`fn withCidrAuthorizationContext()`](#fn-withcidrauthorizationcontext)
* [`fn withCidrAuthorizationContextMixin()`](#fn-withcidrauthorizationcontextmixin)
* [`fn withIpamPoolId()`](#fn-withipampoolid)
* [`fn withNetmaskLength()`](#fn-withnetmasklength)
* [`fn withTimeouts()`](#fn-withtimeouts)
* [`fn withTimeoutsMixin()`](#fn-withtimeoutsmixin)
* [`obj cidr_authorization_context`](#obj-cidr_authorization_context)
  * [`fn new()`](#fn-cidr_authorization_contextnew)
* [`obj timeouts`](#obj-timeouts)
  * [`fn new()`](#fn-timeoutsnew)

## Fields

### fn new

```ts
new()
```


`aws.vpc_ipam_pool_cidr.new` injects a new `aws_vpc_ipam_pool_cidr` Terraform `resource`
block into the root module document.

Additionally, this inserts a private function into the `_ref` attribute that generates references to attributes of the
resource. For example, if you added a new instance to the root using:

    # arguments omitted for brevity
    aws.vpc_ipam_pool_cidr.new('some_id')

You can get the reference to the `id` field of the created `aws.vpc_ipam_pool_cidr` using the reference:

    $._ref.aws_vpc_ipam_pool_cidr.some_id.get('id')

This is the same as directly entering `"${ aws_vpc_ipam_pool_cidr.some_id.id }"` as the value.

NOTE: if you are chaining multiple resources together in a merge operation, you may not be able to use `super`, `self`,
or `$` to refer to the root object. Instead, make an explicit outer object using `local`.

**Args**:
  - `resourceLabel` (`string`): The name label of the block.
  - `cidr` (`string`): Set the `cidr` field on the resulting resource block. When `null`, the `cidr` field will be omitted from the resulting object.
  - `ipam_pool_id` (`string`): Set the `ipam_pool_id` field on the resulting resource block.
  - `netmask_length` (`number`): Set the `netmask_length` field on the resulting resource block. When `null`, the `netmask_length` field will be omitted from the resulting object.
  - `cidr_authorization_context` (`list[obj]`): Set the `cidr_authorization_context` field on the resulting resource block. When `null`, the `cidr_authorization_context` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.vpc_ipam_pool_cidr.cidr_authorization_context.new](#fn-cidr_authorization_contextnew) constructor.
  - `timeouts` (`obj`): Set the `timeouts` field on the resulting resource block. When `null`, the `timeouts` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.vpc_ipam_pool_cidr.timeouts.new](#fn-timeoutsnew) constructor.

**Returns**:
- A mixin object that injects the new resource into the root Terraform configuration.


### fn newAttrs

```ts
newAttrs()
```


`aws.vpc_ipam_pool_cidr.newAttrs` constructs a new object with attributes and blocks configured for the `vpc_ipam_pool_cidr`
Terraform resource.

Unlike [aws.vpc_ipam_pool_cidr.new](#fn-new), this function will not inject the `resource`
block into the root Terraform document. Instead, this must be passed in as the `attrs` argument for the
[tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) function to build a complete block.

This is most useful when you need to preprocess the attributes with functions, conditional, or looping logic prior to
injecting into a complete block.

**Args**:
  - `cidr` (`string`): Set the `cidr` field on the resulting object. When `null`, the `cidr` field will be omitted from the resulting object.
  - `ipam_pool_id` (`string`): Set the `ipam_pool_id` field on the resulting object.
  - `netmask_length` (`number`): Set the `netmask_length` field on the resulting object. When `null`, the `netmask_length` field will be omitted from the resulting object.
  - `cidr_authorization_context` (`list[obj]`): Set the `cidr_authorization_context` field on the resulting object. When `null`, the `cidr_authorization_context` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.vpc_ipam_pool_cidr.cidr_authorization_context.new](#fn-cidr_authorization_contextnew) constructor.
  - `timeouts` (`obj`): Set the `timeouts` field on the resulting object. When `null`, the `timeouts` sub block will be omitted from the resulting object. When setting the sub block, it is recommended to construct the object using the [aws.vpc_ipam_pool_cidr.timeouts.new](#fn-timeoutsnew) constructor.

**Returns**:
  - An attribute object that can be used with [tf.withResource](https://github.com/tf-libsonnet/core/tree/main/docs#fn-withresource) to construct a new `vpc_ipam_pool_cidr` resource into the root Terraform configuration.


### fn withCidr

```ts
withCidr()
```

`aws.string.withCidr` constructs a mixin object that can be merged into the `string`
Terraform resource block to set or update the cidr field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`string`): The value to set for the `cidr` field.


### fn withCidrAuthorizationContext

```ts
withCidrAuthorizationContext()
```

`aws.list[obj].withCidrAuthorizationContext` constructs a mixin object that can be merged into the `list[obj]`
Terraform resource block to set or update the cidr_authorization_context field.

This function will replace the array with the passed in `value`. If you wish to instead append the
passed in value to the existing array, use the [aws.list[obj].withCidrAuthorizationContextMixin](TODO) function.


**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`list[obj]`): The value to set for the `cidr_authorization_context` field.


### fn withCidrAuthorizationContextMixin

```ts
withCidrAuthorizationContextMixin()
```

`aws.list[obj].withCidrAuthorizationContextMixin` constructs a mixin object that can be merged into the `list[obj]`
Terraform resource block to set or update the cidr_authorization_context field.

This function will append the passed in array or object to the existing array. If you wish
to instead replace the array with the passed in `value`, use the [aws.list[obj].withCidrAuthorizationContext](TODO)
function.


**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`list[obj]`): The value to set for the `cidr_authorization_context` field.


### fn withIpamPoolId

```ts
withIpamPoolId()
```

`aws.string.withIpamPoolId` constructs a mixin object that can be merged into the `string`
Terraform resource block to set or update the ipam_pool_id field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`string`): The value to set for the `ipam_pool_id` field.


### fn withNetmaskLength

```ts
withNetmaskLength()
```

`aws.number.withNetmaskLength` constructs a mixin object that can be merged into the `number`
Terraform resource block to set or update the netmask_length field.



**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`number`): The value to set for the `netmask_length` field.


### fn withTimeouts

```ts
withTimeouts()
```

`aws.obj.withTimeouts` constructs a mixin object that can be merged into the `obj`
Terraform resource block to set or update the timeouts field.

This function will replace the map with the passed in `value`. If you wish to instead merge the
passed in value to the existing map, use the [aws.obj.withTimeoutsMixin](TODO) function.

**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`obj`): The value to set for the `timeouts` field.


### fn withTimeoutsMixin

```ts
withTimeoutsMixin()
```

`aws.obj.withTimeoutsMixin` constructs a mixin object that can be merged into the `obj`
Terraform resource block to set or update the timeouts field.

This function will merge the passed in value to the existing map. If you wish
to instead replace the entire map with the passed in `value`, use the [aws.obj.withTimeouts](TODO)
function.


**Args**:
  - `resourceLabel` (`string`): The name label of the block to update.
  - `value` (`obj`): The value to set for the `timeouts` field.


## obj cidr_authorization_context



### fn cidr_authorization_context.new

```ts
new()
```


`aws.vpc_ipam_pool_cidr.cidr_authorization_context.new` constructs a new object with attributes and blocks configured for the `cidr_authorization_context`
Terraform sub block.



**Args**:
  - `message` (`string`): Set the `message` field on the resulting object. When `null`, the `message` field will be omitted from the resulting object.
  - `signature` (`string`): Set the `signature` field on the resulting object. When `null`, the `signature` field will be omitted from the resulting object.

**Returns**:
  - An attribute object that represents the `cidr_authorization_context` sub block.


## obj timeouts



### fn timeouts.new

```ts
new()
```


`aws.vpc_ipam_pool_cidr.timeouts.new` constructs a new object with attributes and blocks configured for the `timeouts`
Terraform sub block.



**Args**:
  - `create` (`string`): Set the `create` field on the resulting object. When `null`, the `create` field will be omitted from the resulting object.
  - `delete` (`string`): Set the `delete` field on the resulting object. When `null`, the `delete` field will be omitted from the resulting object.

**Returns**:
  - An attribute object that represents the `timeouts` sub block.
